fix spacing

--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -26,7 +26,7 @@
 /* Move text (heading + body) up 4px */
 .aboutMain
   :global(.content-section--imageLeftTextRight .content-section-right) {
-  transform: translateY(-4px);
+  transform: translateY(-32px);
 }
 
 .doodleImg {
@@ -38,6 +38,10 @@
 @media (max-width: 768px) {
   .doodleImg {
     margin-top: -6em;
+  }
+
+  .aboutMain :global(.content-section--imageLeftTextRight .content-section-left--image) {
+    margin-bottom: var(--space-24);
   }
 
   .aboutMain :global(.content-section--imageLeftTextRight) {
@@ -141,7 +145,8 @@
   font-size: 24px;
   font-weight: var(--medium);
   color: var(--black);
-  margin: 0 0 16px;
+
+  padding-bottom: 0;
   text-align: center;
 }
 
@@ -370,6 +375,7 @@
   .smallJoysTitle {
     font-size: 20px;
     margin-bottom: 16px;
+    padding-bottom: 0;
   }
 
   .smallJoysCloud {
